# vernier-news

./: .env.example  .gitignore  CHANGELOG.md  CONCEPT.md  Caddyfile  Dockerfile  HANDOFF.md  Makefile  PROJECT.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  redis_client.py  worker.py
app/auth/: dependencies.py  router.py  utils.py
app/cache/: clusters.py  digest.py
app/models/: __init__.py  article.py  category.py  cluster.py  outlet.py  settings.py  user.py
app/pipeline/: categorise.py  clustering.py  dedup.py  tasks.py  tuning.py
app/pipeline/ingestion/: normalise.py  rss.py
app/routers/: admin.py  articles.py  clusters.py  digest.py  outlets.py  users.py
app/schemas/: cluster.py  digest.py  outlet.py  user.py
bot/: Dockerfile  admin_client.py  alerts.py  auth.py  config.py  formatting.py  handlers.py  main.py
client/: README.md  pubspec.yaml
client/lib/: app.dart  main.dart
client/test/: widget_test.dart
client/web/: index.html  manifest.json
docs/: categorisation-design.md  clustering-fix-spec.md  telegram-bot-spec.md
migrations/: env.py
migrations/versions/: 20260517_0001_initial_schema.py  20260519_0002_add_author_wire_tier_wire_service.py  20260519_0003_add_cluster_entity_cache.py  20260519_0004_add_article_category_id.py  20260519_0005_widen_collection_source.py  20260723_0006_add_settings_table.py
openclaw/skills/vernier-clusters/: SKILL.md
scripts/: seed.py
sources/: feeds.opml
tests/: conftest.py  test_auth.py  test_tuning.py
tests/bot/: test_admin_client.py  test_config.py  test_formatting.py
(+46 files in other folders)
