[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vernier-news"
version = "0.1.0"
description = "Global media intelligence platform"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.8.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "email-validator>=2.1.0",
    "feedparser>=6.0.0",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "langdetect>=1.0.9",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "python-semantic-release>=9.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = false
upload_to_pypi = false
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
